fix: adjust footer margin for better layout on mobile and update hiitme image properties for improved display

--- a/src/components/layouts/Footer.css
+++ b/src/components/layouts/Footer.css
@@ -51,7 +51,7 @@
 
 @media (max-width: 800px) {
     .footer-wrapper {
-        margin-top: auto;
+        margin-top: 60px;
     }
 
     .mobile-footer {
