--- a/src/components/layouts/Projects.css
+++ b/src/components/layouts/Projects.css
@@ -20,7 +20,8 @@
 .hiitme-image {
   width: 100%;
   height: 315px;
-  object-fit: cover;
+  object-fit: contain;
+  background-color: #9650c2;
   transition: all 0.3s ease;
   border-radius: 10px;
   box-shadow: 0 8px 25px rgba(60, 59, 72, 0.3);
